# workout-log

./: .gitignore  Cargo.toml  make.sh  workouts.csv  workouts.db
frontend/: index.html  script.js  styles.css
scripts/: convert-date-db.py  deploy.sh
src/: db.rs  main.rs  routing.rs
