[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "1.2.0", features = ["full"] }
tokio = { version = "1.37.0", features = ["full"] }
hyper-util = { version = "0.1.3", features = ["full"] }
serde = { version = "1.0.197", features = ["derive"] }
time = { version = "0.3.34", features = ["parsing", "formatting", "macros"] }
serde_json = { version = "1.0.115", features = ["std"] }
sqlite = "0.34.0"
url = "2.5.0"
http-body-util = "0.1.1"
